--- a/deny.toml
+++ b/deny.toml
@@ -91,6 +91,8 @@ ignore = [
 allow = [
     "MIT",
     "Apache-2.0",
+    "Apache-2.0 WITH LLVM-exception",
+    "MPL-2.0",
     "BSD-3-Clause",
     "ISC",
     "Unicode-DFS-2016",
