--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ target
 # Contains mutation testing data
 **/mutants.out*/
 
+# User-specific configuration (use diesel-guard.toml.example as template)
+diesel-guard.toml
+
 # RustRover
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
