--- a/diesel-guard.toml.example
+++ b/diesel-guard.toml.example
@@ -3,10 +3,13 @@
 
 # Skip checking migrations created before this timestamp
 # Useful for retrofitting diesel-guard into existing projects
-# Format: YYYY_MM_DD_HHMMSS (matching Diesel migration directory timestamp prefix)
+# Accepted formats: YYYYMMDDHHMMSS, YYYY_MM_DD_HHMMSS, or YYYY-MM-DD-HHMMSS
+# Works with any migration directory format regardless of separator style
 #
-# Example: Skip all migrations before January 1, 2024
-# start_after = "2024_01_01_000000"
+# Examples: Skip all migrations before January 1, 2024
+# start_after = "2024_01_01_000000"  # underscores
+# start_after = "2024-01-01-000000"  # dashes
+# start_after = "20240101000000"     # no separators
 
 # Whether to check down.sql files in addition to up.sql
 # Default: false
